# cherno-ray-tracing

./: .clangformat  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresets.json.template  README.md  tailwind.config.js  vcpkg.json
app/: CMakeLists.txt
app/src/: Camera.cpp  Camera.h  Color.h  Ray.h  Renderer.cpp  Renderer.h  Scene.h  main.cpp
app/web/: TODO.md  closure args-doc.txt  debounce.ts  em-extern-post.js  em-extern-pre.js  em-post.js  em-pre.js  em-template.html  types.d.ts
src/: main.cpp
